--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
     <div class="stars-overlay"></div>
     <div id="app-container">
+        <header>
+            <p id="instructions">Focus on your question and shuffle the deck...</p>
+        </header>
 
         <div id="selection-area">
             <div class="slot-container">
